--- a/hello_world.html
+++ b/hello_world.html
@@ -3,9 +3,7 @@
 
 <body>
 
-  <script>
-    alert('I\'m JavaScript!');
-  </script>
+  <script src="C:\Users\Ana_Piedrahita\Documents\JS_Learning\alert.js"> </script>
 
 </body>
 
