--- a/hello_world.html
+++ b/hello_world.html
@@ -3,7 +3,7 @@
 
 <body>
 
-  <script src="C:\Users\Ana_Piedrahita\Documents\JS_Learning\alert.js"> </script>
+  <script src="alert.js"> </script>
 
 </body>
 
